# cloudflare-ddns-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cloudflare.rs  main.rs
