[package]
name = "cloudflare-ddns-rs"
version = "0.1.0"
authors = ["abelfodil <anes@gmail.com>", "DIGarnier <davidigarnier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
openssl = { version = "0.10", features = ["vendored"] 